--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.styledata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.styledata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.StyleData:interface'
-    summary: 描述通过调用返回的数据的接口`style.toJSON()`<!-- -->.
-    name: Excel.Interfaces.StyleData
-    fullName: Excel.Interfaces.StyleData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
+### YamlMime:TSType
+name: Excel.Interfaces.StyleData
+uid: excel!Excel.Interfaces.StyleData:interface
+package: excel!
+fullName: Excel.Interfaces.StyleData
+summary: 描述通过调用返回的数据的接口 `style.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: abd1fd60e6be2d4da50d6307b090a1c11ba71f07
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49343163"
