--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.chartdisplayblanksas.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.chartdisplayblanksas.yml
@@ -1,35 +1,29 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ChartDisplayBlanksAs:enum'
-    summary: '\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: Excel.ChartDisplayBlanksAs
-    fullName: Excel.ChartDisplayBlanksAs
-    langs:
-      - typeScript
-    type: enum
-    package: excel!
-    children:
-      - 'excel!Excel.ChartDisplayBlanksAs.interplotted:member'
-      - 'excel!Excel.ChartDisplayBlanksAs.notPlotted:member'
-      - 'excel!Excel.ChartDisplayBlanksAs.zero:member'
-  - uid: 'excel!Excel.ChartDisplayBlanksAs.interplotted:member'
-    name: interplotted
-    fullName: interplotted
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Interplotted"'
-  - uid: 'excel!Excel.ChartDisplayBlanksAs.notPlotted:member'
-    name: notPlotted
-    fullName: notPlotted
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"NotPlotted"'
-  - uid: 'excel!Excel.ChartDisplayBlanksAs.zero:member'
-    name: zero
-    fullName: zero
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Zero"'
+### YamlMime:TSEnum
+name: Excel.ChartDisplayBlanksAs
+uid: excel!Excel.ChartDisplayBlanksAs:enum
+package: excel!
+fullName: Excel.ChartDisplayBlanksAs
+summary: '\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: interplotted
+  uid: excel!Excel.ChartDisplayBlanksAs.interplotted:member
+  package: excel!
+  summary: ''
+- name: notPlotted
+  uid: excel!Excel.ChartDisplayBlanksAs.notPlotted:member
+  package: excel!
+  summary: ''
+- name: zero
+  uid: excel!Excel.ChartDisplayBlanksAs.zero:member
+  package: excel!
+  summary: ''
+metadata:
+  ms.openlocfilehash: ae64257878d4f69f3709d25a3b8314e03b0e4b67
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49342631"
