--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.columnpropertiesloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.columnpropertiesloadoptions.yml
@@ -1,91 +1,77 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ColumnPropertiesLoadOptions:interface'
-    summary: |-
-      表示在用作 "getColumnProperties" 方法的一部分时要加载的列属性。
+### YamlMime:TSType
+name: Excel.ColumnPropertiesLoadOptions
+uid: excel!Excel.ColumnPropertiesLoadOptions:interface
+package: excel!
+fullName: Excel.ColumnPropertiesLoadOptions
+summary: >-
+  表示在用作 "getColumnProperties" 方法的一部分时要加载的列属性。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.ColumnPropertiesLoadOptions
-    fullName: Excel.ColumnPropertiesLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    extends:
-      - 'excel!Excel.CellPropertiesLoadOptions:interface'
-    package: excel!
-    children:
-      - 'excel!Excel.ColumnPropertiesLoadOptions#columnHidden:member'
-      - 'excel!Excel.ColumnPropertiesLoadOptions#columnIndex:member'
-      - 'excel!Excel.ColumnPropertiesLoadOptions#format:member'
-  - uid: 'excel!Excel.ColumnPropertiesLoadOptions#columnHidden:member'
-    summary: |-
-      指定是否在属性上进行加载 `columnHidden` 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: columnHidden
-    fullName: columnHidden
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'columnHidden?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.ColumnPropertiesLoadOptions#columnIndex:member'
-    summary: |-
-      指定是否在属性上进行加载 `columnIndex` 。
+  \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: columnHidden
+  uid: excel!Excel.ColumnPropertiesLoadOptions#columnHidden:member
+  package: excel!
+  fullName: columnHidden
+  summary: >-
+    指定是否在属性上进行加载 `columnHidden` 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: columnIndex
-    fullName: columnIndex
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'columnIndex?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.ColumnPropertiesLoadOptions#format:member'
-    summary: |-
-      指定是否在属性上进行加载 `format` 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: format
-    fullName: format
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: |-
-        format?: Excel.CellPropertiesFormatLoadOptions & {
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'columnHidden?: boolean;'
+    return:
+      type: boolean
+- name: columnIndex
+  uid: excel!Excel.ColumnPropertiesLoadOptions#columnIndex:member
+  package: excel!
+  fullName: columnIndex
+  summary: >-
+    指定是否在属性上进行加载 `columnIndex` 。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'columnIndex?: boolean;'
+    return:
+      type: boolean
+- name: format
+  uid: excel!Excel.ColumnPropertiesLoadOptions#format:member
+  package: excel!
+  fullName: format
+  summary: >-
+    指定是否在属性上进行加载 `format` 。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: >-
+      format?: Excel.CellPropertiesFormatLoadOptions & {
+                  columnWidth?: boolean;
+              };
+    return:
+      type: >-
+        <xref uid="excel!Excel.CellPropertiesFormatLoadOptions:interface" /> & {
                     columnWidth?: boolean;
-                };
-      return:
-        type:
-          - 'excel!Excel.ColumnPropertiesLoadOptions#format~0:complex'
-references:
-  - uid: 'excel!Excel.CellPropertiesLoadOptions:interface'
-    name: CellPropertiesLoadOptions
-  - uid: 'excel!Excel.ColumnPropertiesLoadOptions#format~0:complex'
-    name: |-
-      Excel.CellPropertiesFormatLoadOptions & {
-                  columnWidth?: boolean;
-              }
-    fullName: |-
-      Excel.CellPropertiesFormatLoadOptions & {
-                  columnWidth?: boolean;
-              }
-    spec.typeScript:
-      - uid: 'excel!Excel.CellPropertiesFormatLoadOptions:interface'
-        name: Excel.CellPropertiesFormatLoadOptions
-        fullName: Excel.CellPropertiesFormatLoadOptions
-      - name: |2-
-           & {
-                      columnWidth?: boolean;
-                  }
-        fullName: |2-
-           & {
-                      columnWidth?: boolean;
-                  }
+                }
+extends: <xref uid="excel!Excel.CellPropertiesLoadOptions:interface" />
+metadata:
+  ms.openlocfilehash: 12faff6d3a819320cc2cc05eb2583996c713a823
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49342512"
